--- a/adminp.html
+++ b/adminp.html
@@ -2,40 +2,39 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Admin portal</title>
+	<link rel="stylesheet" href="login.css">
 	<style>
 		h2{
 			color:chocolate;
-			
+
 		}
-		.background {
-			background-image:url("img.png");
-			height: 60px;
-			background-position:top;
-			padding:7px;
-		
-		}
+		.body {
+			background-image:url("Book/images/bgim.png") !important;
+
+
+	}
 		a{
-			color
+			color: black;
 		}
-		nav{
-			background-color:lightcoral;
-		}
+
 	</style>
 </head>
 <body>
-	<div class="background">
+<center>
 		<h2 align="center">ADMIN PORTAL</h2>
-	</div>
 
-
-	<nav>
-		<a href="addbooks.html" target="blank">ADD BOOK</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="#">ADD ARTICLE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="#">ADD PODCAST</a>
+<div class="navadmin" align="center">
+<nav>
+	<ul>
+		<li><a href="loginaddbooks.html" target="blank">ADD BOOK</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</li>
+		<li><a href="#">ADD ARTICLE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+		<li><a href="#">ADD PODCAST</a></li> </ul>
 	</nav>
-	
+</div>
+</center
 	</body>
 </html>
